--- a/Templates/home.html
+++ b/Templates/home.html
@@ -1,21 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Hello, world!</title>
+    <title>Digit Image Reader</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  <!--</head>
-  <body>
-    <title>Upload new File</title>
-    <h1>Upload new File</h1>
-    <form method=post enctype=multipart/form-data>
-      <p><input type=file name=file>
-         <input type=submit value=Upload>
-    </form>-->
+
+    <!-- Refernce to Bootstrap code below - view-source:http://getbootstrap.com/docs/4.0/examples/starter-template/ -->
 
     <!-- Bootstrap core CSS -->
     <link href="../../../../dist/css/bootstrap.min.css" rel="stylesheet">
@@ -61,10 +55,12 @@
 
     <main role="main">
 
-      <!-- Main jumbotron for a primary marketing message or call to action -->
+   
+   <form id="upload-form" action="{{ url_for('upload') }}" style="margin-top: 50px;" method="POST" enctype="multipart/form-data">
+
       <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Upload Digital Image</h1>
+          <h1 class="display-3">Upload Digit Image</h1>
           <main role="main" class="container">
         <div class="starter-template">
           <form method="POST" enctype="multipart/form-data">
@@ -82,6 +78,9 @@
         </div>
       </div>
 
+<!-- Hr tag to separate the image loading to the image number-->
+      <hr></hr>
+
       <div class="container">
         <!-- Example row of columns -->
         <div class="row">
@@ -93,15 +92,15 @@
 
       </div> <!-- /container -->
 
+      <head>
+        <body>
+          <img src= " {{url_for('send_image', filename=image_name)}}" ALIGN="left"  HEIGHT="500" WIDTH="500">
+        </body>
+      </head>
+
     </main>
 
-    <footer class="container">
-      <p>&copy; Donal McGahon 2017</p>
-    </footer>
-
-
     
-
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
