--- a/Templates/index.html
+++ b/Templates/index.html
@@ -22,50 +22,43 @@
   </head>
 
   <body>
+    <img src="../static/numbers.jpg">
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Digit Recogniser</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Refernce 1</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Refernce 2</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="#">Refernce 3</a>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Refernce 4</a>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
       </div>
     </nav>
 
     <main role="main">
 
 <body>
-    <div style="position:absolute; top:20px;">
+    <div style="position:absolute; top:55px;">
             <div class="centered ">
                 <canvas id="canvas" width="280" height="280" style="border: thin solid black"></canvas>
             </div>
+            <h4>Draw any single digit in the above space</h4>
             <div class="centered">
-                <input type="button" class="myButton" value="Predict">
-                <input type="button" id="clearButton" value="Clear">
+                <input type="button" class="myButton btn btn-success" value="Predict">
+                <input type="button" id="clearButton" class="btn btn-danger" value="Clear">
 
                 <div class="centered">
                     <h1 id="result"></h1>
@@ -74,6 +67,7 @@
         </div>
 
       <!-- The following code was taken and adapted from https://github.com/sleepokay/mnist-flask-app/blob/master/templates/index.html-->
+      <div style="position:absolute; top:200px;">
       <script src="{{url_for('static',filename='jquery-3.2.0.min.js')}}"></script>
 	    <script src="{{url_for('static',filename='index.js')}}"></script>
 	    <script type="text/javascript">   
@@ -92,6 +86,8 @@
 	   			});
 	   		});
 	   </script>
+      </div>
+      
 
 </body>
 
