Few comments & added headings to README.md

--- a/Templates/index.html
+++ b/Templates/index.html
@@ -4,6 +4,7 @@
 <html>
 
 <head>
+  <!-- CSS Styling -->
   <style>
     div1 {
        background-color: white;
@@ -15,6 +16,9 @@
     div2 {
        height: 220px;
        width: 400px;
+    }
+    h4 {
+      font-weight: 900;
     }
   </style>
     <title>Digit Image Reader</title>
@@ -42,7 +46,7 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
+      <!-- Links to References of my project -->
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
